# Website-Vercel

./: .env.example  .env.production.local  .gitignore  README.md  package-lock.json  package.json  vercel.json
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/app/: backtest_cli.py  forward_test_cli.py  ingest_cli.py  ingest_equities_cli.py  label_cli.py  preprocess_cli.py  select_strategy_cli.py  trade_cli.py
backend/config/: base.yaml  dev.yaml  prod.yaml  selection_policy.yaml
backend/config/features/: pipeline.yaml
backend/config/strategies/: mean_reversion.yaml  momentum.yaml
backend/pi3_invest_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: run_universe_backtests.ps1  run_universe_backtests.py
backend/sql/: 001_backtest_metrics.sql
backend/src/: __init__.py
backend/src/backtesting/: engine.py  metrics.py  persist.py  portfolio.py  walk_forward.py
backend/src/core/: __init__.py  configs.py  io.py  logging.py  timeutils.py
backend/src/execution/: __init__.py  adapter.py  risk.py  router.py
backend/src/features/: pipeline.py  price_volume.py  technicals.py  volatility.py
backend/src/forward_test/: __init__.py  paper_broker.py  runner.py
backend/src/ingestion/: __init__.py  equities_fetcher.py  landing_validator.py  ohlc_fetcher.py  sp500_universe.py
backend/src/labeling/: __init__.py  splits.py  targets.py
backend/src/persistence/: __init__.py  metrics_store.py
backend/src/preprocessing/: __init__.py  clean.py  resample.py  validate.py
backend/src/selection/: __init__.py  scorer.py  (+1 more)
(+1081 files in other folders)
